--- a/cloudfunctions/tcbRouter/package.json
+++ b/cloudfunctions/tcbRouter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "music",
+  "name": "tcbRouter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,8 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "request": "^2.88.0",
-    "request-promise": "^4.2.5",
     "tcb-router": "^1.1.2",
     "wx-server-sdk": "latest"
   }
