--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,7 +3,9 @@
     "pages/playlist/playlist",
     "pages/blog/blog",
     "pages/profile/profile",
-    "pages/demo/demo"
+    "pages/demo/demo",
+    "pages/musiclist/musiclist",
+    "pages/player/player"
 
   ],
   "window": {
