--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -8,6 +8,9 @@
     "pages/player/player"
 
   ],
+  "requiredBackgroundModes": [
+    "audio"
+  ],
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
