部分发布功能 下一步进行选择图片功能

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -5,8 +5,8 @@
     "pages/profile/profile",
     "pages/demo/demo",
     "pages/musiclist/musiclist",
-    "pages/player/player"
-
+    "pages/player/player",
+    "pages/blog-edit/blog-edit"
   ],
   "requiredBackgroundModes": [
     "audio"
@@ -42,6 +42,5 @@
       }
     ]
   },
-  "sitemapLocation": "sitemap.json",
-  "style": "v2"
+  "sitemapLocation": "sitemap.json"
 }
