--- a/project.config.json
+++ b/project.config.json
@@ -31,13 +31,32 @@
 		"game": {
 			"list": []
 		},
+		"gamePlugin": {
+			"current": -1,
+			"list": []
+		},
 		"miniprogram": {
 			"current": 0,
 			"list": [
 				{
 					"id": -1,
 					"name": "db guide",
-					"pathName": "pages/databaseGuide/databaseGuide"
+					"pathName": "pages/databaseGuide/databaseGuide",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "pages/blog/blog",
+					"pathName": "pages/blog/blog",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/blog-edit/blog-edit",
+					"pathName": "pages/blog-edit/blog-edit",
+					"query": "nickName= \"青花瓷\"& avatarUrl=\"https://wx.qlogo.cn/mmopen/vi_32/Q0j4TwGTfTJOrgiae…QGoV6godl4hog60YzxMauAogmQicAMKllKCfcBm0Ax23Q/132\"",
+					"scene": null
 				}
 			]
 		}
